[package]
name = "tinymvt"
version = "0.2.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/ciscorn/tinymvt"
description = "A lightweight library for encoding Mapbox Vector Tiles (MVT)"

[dependencies]
foldhash = "0.1.5"
indexmap = "2.9.0"
prost = "0.14.0"

[build-dependencies]
prost-build = "0.14.0"
